--- a/tools/Password_Storage/templates/Password_Storage/Add_Password.html
+++ b/tools/Password_Storage/templates/Password_Storage/Add_Password.html
@@ -1,27 +1,16 @@
 {% extends 'base.html' %}{% block content %}
-<!-- <body style="background-color: #8aff9c"> -->
-  <body class="bg-secondary">
-  {% if messages %}
-  <div class="alert alert-primary" role="alert">
-    {% for message in messages %} {{ message }} {% endfor %}
-  </div>
-  <br />
-  {% endif %}
-
-  <h2 class="text-white text-center d-block p-0 m-0">Add A Password</h1>
-  <div class="form-group">
-    <form method="POST" class="container">
-      {% csrf_token %} {% if messages %}
-      <ul class="messages">
-        {% for message in messages %}
-        <li class="{{ message.tags }}">{{ message }}</li>
-        {% endfor %}
-      </ul>
-      {% endif %} {{ form.as_p }}
-      <p class="text-center">
-      <button type="submit" class="btn btn-success">Add Pass</button>
-      </p>
-    </form>
-  </div>
+<body class="bg-dark">
+  <form
+    action=""
+    method="POST"
+    class="d-flex justify-content-center align-items-center mb-4"
+  >
+    <div class="form-outline flex-fill container text-center text-white">
+      {% csrf_token %} {{form.as_p}}
+      <button type="submit" value="Submit" class="btn btn-success mb-3 ms-2">
+        Add Password
+      </button>
+    </div>
+  </form>
 </body>
 {% endblock %}
