--- a/tools/Password_Storage/templates/Password_Storage/index.html
+++ b/tools/Password_Storage/templates/Password_Storage/index.html
@@ -4,7 +4,6 @@
       <table class="table text-white">
         <thead>
           <tr>
-            <th>Id</th>
             <th>username</th>
             <th>Password</th>
             <th>Description</th>
@@ -15,7 +14,6 @@
           {% for pass in passwords %}
 
           <tr>
-            <td>{{pass.id}}</td>
             <td>{{pass.username}}</td>
             <td>{{pass.password}}</td>
             <td>{{pass.description}}</td>
@@ -25,7 +23,7 @@
         </tbody>
       </table>
       <p class="text-center">
-        <a href="{% url 'Password_Storage:Add_Password' %}">
+        <a href="{% url 'Password_Storage:AddPassword' %}">
           <button class="btn btn-success p-1 m-0 align-center" type="button">
             New Password
           </button>
