--- a/tools/Password_Storage/templates/Password_Storage/index.html
+++ b/tools/Password_Storage/templates/Password_Storage/index.html
@@ -8,6 +8,7 @@
             <th>Password</th>
             <th>Description</th>
             <th>Add Date</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -18,6 +19,17 @@
             <td>{{pass.password}}</td>
             <td>{{pass.description}}</td>
             <td>{{pass.create_Date}}</td>
+            <td>
+              <form action="deletePassword/{{pass.id}}" method="POST"  class=" d-inline-block ">
+                {% csrf_token %}{{form.as_p}}
+                <button value="remove" type="submit" class="btn btn-danger"> remove </button>
+              </form>
+              {% comment %} <a href="{% url 'Password_Storage:editPassword' pass.id %}">
+                <button class="btn btn-success p-1 m-0 align-center" type="button">
+                  Edit Password
+                </button>
+              </a> {% endcomment %}
+            </td>
           </tr>
           {% endfor %}
         </tbody>
@@ -33,3 +45,41 @@
   </body>
   </html>
   {% endblock  %}
+  {% comment %} 
+  {% extends 'base.html' %} {% block content %}
+<body class="bg-dark">
+  <div class="container">
+    <table class="table text-white">
+      <thead>
+        <tr>
+          <th>Old Username</th>
+          <th>Old Password</th>
+          <th>Old Description</th>
+          <th> Add Date</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>{{password.username}}</td>
+          <td>{{password.password}}</td>
+          <td>{{password.description}}</td>
+          <td>{{password.create_Date}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <form
+    action=""
+    method="POST"
+    class="d-flex justify-content-center align-items-center mb-4"
+  >
+    <div class="form-outline flex-fill">{% csrf_token %} {{form.as_p}}</div>
+    <button class="btn btn-info mb-3 ms-2" type="submit" name="save">
+      Save Changes
+    </button>
+  </form>
+  {% endblock %}
+</body>
+ 
+  {% endcomment %}
