--- a/tools/text_to_HTML/templates/text_to_HTML/index.html
+++ b/tools/text_to_HTML/templates/text_to_HTML/index.html
@@ -11,8 +11,8 @@
       font-size: 20px;
     }
     .texteditor p label {
-      font-weight: 800;
-      font-size: 18px;
+      font-weight: 900;
+      font-size: 20px;
     }
     #htmldata {
       font-weight: 600;
@@ -20,16 +20,16 @@
   </style>
   <body class="bg-secondary">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
-          <div class="texteditor">{{form.media}} {{form.as_p}}</div>
+      <div class="row p-2">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 p-2" >
+          <div class="texteditor ">{{form.media}} {{form.as_p}}</div>
           <input type="submit" class="btn btn-info" onclick="TextConvert()" />
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-6">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-6 p-2">
           <div class="htmleditor">
             <p>HTML Editor</p>
             <div class="form-group">
-              <textarea class="form-control" rows="16" id="htmldata">
+              <textarea class="form-control rounded-0" rows="16" id="htmldata">
               </textarea>
             </div>
           </div>
