--- a/tools/templates/Outer_Base.html
+++ b/tools/templates/Outer_Base.html
@@ -11,6 +11,29 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <style>
+      .gradient-custom-2 {
+        background: #020064;
+        background: -webkit-linear-gradient(
+          to right,
+          #020064,
+          #0041b8,
+          #035cff
+        );
+        background: linear-gradient(to right, #020064, #0041b8, #035cff);
+      }
+      @media (min-width: 768px) {
+        .gradient-form {
+          height: 100vh !important;
+        }
+      }
+      @media (min-width: 769px) {
+        .gradient-custom-2 {
+          border-top-right-radius: 0.3rem;
+          border-bottom-right-radius: 0.3rem;
+        }
+      }
+    </style>
   </head>
   <body>
     {% block content %} {% endblock %}
