reimplemting Authentications, fixing security threat

--- a/tools/TO_DO/templates/TO_DO/all_task.html
+++ b/tools/TO_DO/templates/TO_DO/all_task.html
@@ -8,7 +8,9 @@
             <div class="card-body p-5 pb-3">
               <div class="tab-content" id="ex1-content">
                 {% if tasks %}
-                <table class="container table mb-0 bg-white border border-dark">
+                <table
+                  class="container table mb-0 bg-white border border-dark table-hover"
+                >
                   <thead>
                     <tr>
                       <th>Task</th>
