--- a/tools/Authentications/templates/Registration/sign_up.html
+++ b/tools/Authentications/templates/Registration/sign_up.html
@@ -1,37 +1,35 @@
-{% extends 'Outer_Base.html' %} {% block content %}
-<section class="p-5 gradient-form gradient-custom-2">
+{% extends 'base.html' %} {% block content %}
+<body class="p-5 gradient-form gradient-custom-2">
+  {% if form.errors %}
+  <div class="alert alert-warning alert-dismissible fade show">
+    there was an error in your form
+  </div>
+  {% endif %}
   <div class="row d-flex justify-content-center align-items-center">
     <div class="col-xl-6">
       <div class="card rounded-3 text-black">
-        <div class="row g-0">
+        <div class="row">
           <div class="card-body p-md-5 mx-md-4">
-            <div class="text-center">
-              <img
-                src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/lotus.webp"
-                style="width: 185px"
-                alt="logo"
-              />
-              <h4 class="mt-1 mb-5 pb-1">Welcome To Tools App</h4>
-            </div>
-            <form action="" method="POST">
+            <h4 class="mb-5 pb-1 text-center">Create New Account</h4>
+            <form action="{% url 'Authentications:sign_up' %}" method="POST">
               {% csrf_token %} {{form.as_p}}
               <div class="text-center pt-1 mb-5 pb-1">
                 <input
                   class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
                   type="submit"
-                  value="Login"
+                  value="Create Account"
                 />
               </div>
 
               <div
                 class="d-flex align-items-center justify-content-center pb-4"
               >
-                <p class="mb-0 me-2">Don't have an account?</p>
+                <p class="mb-0 me-2">Already have an account?</p>
                 <a
                   class="btn btn-outline-primary text-decoration-none"
-                  href="{% url 'Authentication:register' %}"
+                  href="{% url 'Authentications:login' %}"
                 >
-                  Create new
+                  Login
                 </a>
               </div>
             </form>
@@ -40,5 +38,6 @@
       </div>
     </div>
   </div>
-</section>
+</body>
+
 {% endblock %}
