--- a/tools/templates/base.html
+++ b/tools/templates/base.html
@@ -37,9 +37,10 @@
   </head>
   <body>
     <!-- ----------------------Navbar start -------------------- -->
+    {% if user.is_authenticated %}
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Tools</a>
+        <a class="navbar-brand" href="/home/">Tools</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -93,13 +94,28 @@
                 >My_Contact</a
               >
             </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="{% url 'Authentications:logout' %}"
+                >logout</a
+              >
+            </li>
+            {% endif %}
           </ul>
         </div>
       </div>
     </nav>
-    <!-- ----------------------Navbar End -------------------- -->
+    <!-- ---------------------- messages -------------------- -->
+    {% if messages %} {% for message in messages %}
+    <div class="alert alert-warning alert-dismissible fade show">
+      {{message}}
+    </div>
+    {% endfor %} {%endif %}
+    <!-- ---------------------- Navbar End -------------------- -->
     {% block content %} {% endblock %}
-    <!-- ----------------------Bootstrap JS -------------------- -->
+    <!-- ---------------------- Bootstrap JS -------------------- -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
