design improvement,weather app fixing, phone_number handeling

--- a/tools/Password_Storage/templates/Password_Storage/index.html
+++ b/tools/Password_Storage/templates/Password_Storage/index.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-  <body class="bg-dark">
+  <body class="bg-secondary">
     <div class="container">
       <table class="table text-white">
         <thead>
@@ -31,7 +31,7 @@
       </table>
       <p class="text-center">
         <a href="{% url 'Password_Storage:AddPassword' %}">
-          <button class="btn btn-success p-1 m-0 align-center" type="button">
+          <button class="btn btn-light p-1 m-0 align-center" type="button">
             New Password
           </button>
         </a>
