--- a/tools/My_Contact/templates/My_Contact/Add_Contact.html
+++ b/tools/My_Contact/templates/My_Contact/Add_Contact.html
@@ -1,18 +1,26 @@
 {% extends 'base.html' %}{% block content %}
-<section class="p-5 gradient-form gradient-custom-2">
-  <form
-    action=""
-    method="POST"
-    class="d-flex justify-content-center align-items-center mb-4"
-  >
-    <div class="form-outline flex-fill container text-center text-white">
-      {% csrf_token %} {{form.as_p}}
-      <input
-        type="submit"
-        value="Add Contact"
-        class="text-primary text-decoration-none bg-white ms-2 p-2 border border-primary rounded-2"
-      />
+<body class="p-5 bg-secondary">
+  <div class="row justify-content-center align-items-center mt-4">
+    <div class="container m-4">
+      <div class="card rounded-0 text-black">
+        <div class="row g-0">
+          <div class="card-body">
+            <form
+              action=""
+              method="POST"
+              class="justify-content-center align-items-center mb-4"
+            >
+              <div class="form-outline flex-fill container text-Dark">
+                {% csrf_token %} {{form.as_p}}
+              </div>
+              <div class="text-center">
+                <input type="submit" value="Add Contact" class="btn btn-dark" />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-  </form>
-</section>
+  </div>
+</body>
 {% endblock %}
