--- a/tools/Password_Storage/templates/Password_Storage/Add_Password.html
+++ b/tools/Password_Storage/templates/Password_Storage/Add_Password.html
@@ -1,16 +1,26 @@
 {% extends 'base.html' %}{% block content %}
-<body class="bg-dark">
-  <form
-    action=""
-    method="POST"
-    class="d-flex justify-content-center align-items-center mb-4"
-  >
-    <div class="form-outline flex-fill container text-center text-white">
-      {% csrf_token %} {{form.as_p}}
-      <button type="submit" value="Submit" class="btn btn-success mb-3 ms-2">
-        Add Password
-      </button>
+<body class="p-5 bg-secondary">
+  <div class="row justify-content-center align-items-center mt-4">
+    <div class="container m-4">
+      <div class="card rounded-0 text-black">
+        <div class="row g-0">
+          <div class="card-body">
+            <form
+              action=""
+              method="POST"
+              class="justify-content-center align-items-center mb-4"
+            >
+              <div class="form-outline flex-fill container text-Dark">
+                {% csrf_token %} {{form.as_p}}
+              </div>
+              <div class="text-center">
+                <input type="submit" value="Add Contact" class="btn btn-dark" />
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </div>
-  </form>
+  </div>
 </body>
 {% endblock %}
