preventing unaugthorized access, limiting session/cookies duration, redirecting logged in users

--- a/tools/Authentications/templates/Registration/sign_up.html
+++ b/tools/Authentications/templates/Registration/sign_up.html
@@ -2,7 +2,7 @@
 <body class="p-5 gradient-form gradient-custom-2">
   {% if form.errors %}
   <div class="alert alert-warning alert-dismissible fade show">
-    there was an error in your form
+    there was an error in your form {{error}}
   </div>
   {% endif %}
   <div class="row d-flex justify-content-center align-items-center">
