fixing last bugs: adding password toggling and unrecognised url handeling

--- a/tools/Password_Storage/templates/Password_Storage/index.html
+++ b/tools/Password_Storage/templates/Password_Storage/index.html
@@ -5,7 +5,7 @@
         <thead>
           <tr>
             <th>username</th>
-            <th>Password</th>
+            <th >Password</th>
             <th>Description</th>
             <th>Add Date</th>
             <th></th>
@@ -14,12 +14,12 @@
         <tbody>
           {% for pass in passwords %}
 
-          <tr>
-            <td>{{pass.username}}</td>
-            <td>{{pass.password}}</td>
-            <td>{{pass.description}}</td>
-            <td>{{pass.create_Date}}</td>
-            <td>
+          <tr >
+            <td class="p-1 ">{{pass.username}}</td>
+            <td class="p-1 px-0" onclick="togglePassword({{pass.id}})"><input class="m-0 p-0" id="{{pass.id}}" type="password" value="{{pass.password}}"/></td>
+            <td class="p-1">{{pass.description}}</td>
+            <td class="p-1">{{pass.create_Date}}</td>
+            <td class="p-1">
               <form action="deletePassword/{{pass.id}}" method="POST"  class=" d-inline-block ">
                 {% csrf_token %}{{form.as_p}}
                 <button value="remove" type="submit" class="btn btn-danger"> remove </button>
@@ -37,6 +37,12 @@
         </a>
       </p>
     </div>
+    <script>
+      function togglePassword(id) {
+        var x = document.getElementById(id);
+        if (x.type === "password") { x.type = "text"; } else { x.type =
+          "password"; } }
+    </script>
   </body>
   </html>
   {% endblock  %}
