--- a/tools/templates/base.html
+++ b/tools/templates/base.html
@@ -40,7 +40,7 @@
     {% if user.is_authenticated %}
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/home/">Tools</a>
+        <a class="navbar-brand" href="/home">Tools</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -94,8 +94,8 @@
                 >My_Contact</a
               >
             </li>
-            {% endif %}
           </ul>
+          {{user.username}} {% endif %}
         </div>
       </div>
     </nav>
